// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Default className override 1`] = `
<div
  data-css-claeju=""
>
  <div
    aria-hidden={true}
    className="fakeClassName"
    data-css-7fe6v0=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      aria-label="Jake Trent"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#BE344B",
        }
      }
    >
      JT
    </div>
  </div>
</div>
`;

exports[`Storyshots Default large 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-12kblpa=""
  >
    <img
      alt="large avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
  </div>
</div>
`;

exports[`Storyshots Default light image 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <img
      alt="light image avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      aria-label="Jake Trent"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#BE344B",
        }
      }
    >
      JT
    </div>
  </div>
</div>
`;

exports[`Storyshots Default medium 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <img
      alt="medium avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
  </div>
</div>
`;

exports[`Storyshots Default small 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-6fiexv=""
  >
    <img
      alt="small avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
  </div>
</div>
`;

exports[`Storyshots Default style override 1`] = `
<div
  data-css-claeju=""
>
  <div
    aria-hidden={true}
    data-css-7fe6v0=""
    style={
      Object {
        "border": "3px solid red",
      }
    }
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      aria-label="Jake Trent"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#BE344B",
        }
      }
    >
      JT
    </div>
  </div>
</div>
`;

exports[`Storyshots Default xLarge 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-inys4v=""
  >
    <img
      alt="xLarge avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
  </div>
</div>
`;

exports[`Storyshots Default xSmall 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1pii7we=""
  >
    <img
      alt="xSmall avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
  </div>
</div>
`;

exports[`Storyshots Image cases flat, long 1`] = `
<div
  data-css-claeju=""
>
  <div
    aria-hidden={true}
    data-css-7fe6v0=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://cdn1.thr.com/sites/default/files/2019/03/chrisrocknaacp.jpg"
    />
    <div
      aria-label="Chris Rock"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#9A171B",
        }
      }
    >
      CR
    </div>
  </div>
</div>
`;

exports[`Storyshots Image cases square 1`] = `
<div
  data-css-claeju=""
>
  <div
    aria-hidden={true}
    data-css-7fe6v0=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://gravatar.com/avatar/63a1fa126f541c0f0ecf1d74f7a40640?s=320&r=g&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      aria-label="Jake Trentsky"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#076F84",
        }
      }
    >
      JT
    </div>
  </div>
</div>
`;

exports[`Storyshots Image cases tall, thin 1`] = `
<div
  data-css-claeju=""
>
  <div
    aria-hidden={true}
    data-css-7fe6v0=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://akns-images.eonline.com/eol_images/Entire_Site/2010330/293.WillFerrell.tg.043010.jpg"
    />
    <div
      aria-label="Will Ferrill"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#1F964E",
        }
      }
    >
      WF
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials % Special Characters 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="% Special Characters"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#1F964E",
        }
      }
    >
      %C
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Anakin Skywalker 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="Anakin Skywalker"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#2D4E82",
        }
      }
    >
      AS
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Budapest Skywalker 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="Budapest Skywalker"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      BS
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Carlos Organa 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="Carlos Organa"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#1F964E",
        }
      }
    >
      CO
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Dennis Pimenta 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="Dennis Pimenta"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#BE344B",
        }
      }
    >
      DP
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Diz Blau 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="Diz Blau"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#2D4E82",
        }
      }
    >
      DB
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Harry Potter 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="Harry Potter"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      HP
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Obi-Wan Kenobi 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="Obi-Wan Kenobi"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      OK
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Peia Organa 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="Peia Organa"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      PO
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Single 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="Single"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#076F84",
        }
      }
    >
      SI
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Uy Marley 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    <div
      aria-label="Uy Marley"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      UM
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials alpha-order names w/ varied colors 1`] = `
<div
  data-css-claeju=""
>
  <div>
    <div
      aria-hidden={true}
      data-css-7fe6v0=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Alan Turing"
        data-css-x99j9q=""
        style={
          Object {
            "backgroundColor": "#49897C",
          }
        }
      >
        AT
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-7fe6v0=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Alan Sleuse"
        data-css-x99j9q=""
        style={
          Object {
            "backgroundColor": "#2D4E82",
          }
        }
      >
        AS
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-7fe6v0=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Alan Alanosphere"
        data-css-x99j9q=""
        style={
          Object {
            "backgroundColor": "#2D4E82",
          }
        }
      >
        AA
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-7fe6v0=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Allen Alarm"
        data-css-x99j9q=""
        style={
          Object {
            "backgroundColor": "#076F84",
          }
        }
      >
        AA
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-7fe6v0=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Allen Allen"
        data-css-x99j9q=""
        style={
          Object {
            "backgroundColor": "#BE344B",
          }
        }
      >
        AA
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-7fe6v0=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Allen Stewart"
        data-css-x99j9q=""
        style={
          Object {
            "backgroundColor": "#9A171B",
          }
        }
      >
        AS
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-7fe6v0=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Brian Can Stand Here"
        data-css-x99j9q=""
        style={
          Object {
            "backgroundColor": "#9A171B",
          }
        }
      >
        BH
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-7fe6v0=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Brian Can't Stand Here"
        data-css-x99j9q=""
        style={
          Object {
            "backgroundColor": "#49897C",
          }
        }
      >
        BH
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-7fe6v0=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Brian Life Of"
        data-css-x99j9q=""
        style={
          Object {
            "backgroundColor": "#2D4E82",
          }
        }
      >
        BO
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-7fe6v0=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Brian O'Mally"
        data-css-x99j9q=""
        style={
          Object {
            "backgroundColor": "#076F84",
          }
        }
      >
        BO
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials empty name, no src 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  >
    
  </div>
</div>
`;

exports[`Storyshots Using Initials error-out image src, with name 1`] = `
<div
  data-css-claeju=""
>
  <div
    aria-hidden={true}
    data-css-7fe6v0=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://jaketrent.com/fake.jpg"
    />
    <div
      aria-label="Bill Dill"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      BD
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials null name, no src 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-7fe6v0=""
  />
</div>
`;

exports[`Storyshots Using Initials with invalid gravatar image 1`] = `
<div
  data-css-claeju=""
>
  <div
    aria-hidden={true}
    data-css-7fe6v0=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/invalidhash?d=tmp&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      aria-label="Alan Turing"
      data-css-x99j9q=""
      style={
        Object {
          "backgroundColor": "#49897C",
        }
      }
    >
      AT
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials with invalid gravatar image, no name 1`] = `
<div
  data-css-claeju=""
>
  <div
    aria-hidden={true}
    data-css-7fe6v0=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/invalidhash?d=tmp&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
  </div>
</div>
`;
